# derivor

./: .gitignore  Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs
src/constructor/: constants.rs  enums.rs  fields.rs  mod.rs  structs.rs  unions.rs
